[package]
name = "DragonFoxIDE"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
rpassword = "7.5.4"

# Optimized release build — run with: cargo build --release
[profile.release]
opt-level = "s"        # Optimize for small binary size
lto = true             # Link-Time Optimization (slower build, faster + smaller binary)
codegen-units = 1      # Single codegen unit = better optimization
strip = true           # Remove debug symbols from binary
panic = "abort"        # Smaller binary, no unwinding overhead
