[package]
name = "DragonFoxIDE"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
rfd = "0.15.0"
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optimized release build — run with: cargo build --release
[profile.release]
opt-level = "s"        # Optimize for small binary size
lto = true             # Link-Time Optimization (slower build, faster + smaller binary)
codegen-units = 1      # Single codegen unit = better optimization
strip = true           # Remove debug symbols from binary
panic = "abort"        # Smaller binary, no unwinding overhead
